--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Calculator</title>
-
+    <title>Calculator By RKD</title>
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,700"
       rel="stylesheet"
@@ -17,6 +16,8 @@
   </head>
 
   <body>
+   
+    <div class="container flex flex-col items-center mx-auto m-w-20"></div>
     <div class="container">
       <div class="calculator">
         <div class="calculator__display">0</div>
